--- a/test.html
+++ b/test.html
@@ -32,6 +32,7 @@
                             'display_profile': true,
                             'display_biography': true,
                             'display_gallery': true,
+                            'display_captions': true,
                             'get_raw_json': false,
                             'callback': null,
                             'styling': true,
@@ -54,6 +55,7 @@
                             'display_profile': false,
                             'display_biography': false,
                             'display_gallery': true,
+                            'display_captions': false,
                             'get_raw_json': false,
                             'callback': null,
                             'styling': true,
@@ -135,6 +137,7 @@
                             'container': "#instagram-feed4",
                             'display_profile': true,
                             'display_gallery': true,
+                            'display_captions': true,
                             'items': 100,
                             'items_per_row': 5,
                             'margin': 0.5
