--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
                 'display_captions': true,
                 'callback': null,
                 'styling': true,
+                'random': false,
                 'items': 8,
                 'items_per_row': 4,
                 'margin': 1,
@@ -618,6 +619,7 @@
                     'display_captions': true,
                     'callback': null,
                     'styling': true,
+                    'random': false,
                     'items': 8,
                     'items_per_row': 4,
                     'margin': 1,
