Added new parameter to Documentation table

--- a/index.html
+++ b/index.html
@@ -234,6 +234,14 @@
                     </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
+                            <code class="text-bold flex-grow-1">random</code>
+                        </td>
+                        <td><em>Boolean</em></td>
+                        <td><code>false</code></td>
+                        <td>Enables random shuffling of the 12 most recent images</td>
+                    </tr>
+                    <tr>
+                        <td class="d-flex flex-wrap">
                             <code class="text-bold flex-grow-1">items</code>
                         </td>
                         <td><em>number [Int]</em></td>
