Caching instagram response option

--- a/index.html
+++ b/index.html
@@ -282,6 +282,14 @@
                     </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
+                            <code class="text-bold flex-grow-1">cache_time</code>
+                        </td>
+                        <td><em>number [Int]</em></td>
+                        <td><code>0</code></td>
+                        <td>Expires cache time in minutes for caching Instagram response</td>
+                    </tr>
+                    <tr>
+                        <td class="d-flex flex-wrap">
                             <code class="text-bold flex-grow-1">on_error</code>
                         </td>
                         <td><em>function(error_description, error_code)</em></td>
