--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
                             <code class="text-bold flex-grow-1">cache_time</code>
                         </td>
                         <td><em>number [Int]</em></td>
-                        <td><code>120</code></td>
-                        <td>Instagram response cache expiry time in minutes</td>
+                        <td><code>360</code></td>
+                        <td>Instagram response cache expiry time in minutes. <strong>Increase this if you get banned too often</strong>.</td>
                     </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
