--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         </td>
                         <td><em>Boolean</em></td>
                         <td><code>true</code></td>
-                        <td>Enables displaying the biography. Not compatible when loading a <span class="text-small text-italic">tag</span> or from GraphQL API with <span class="text-small text-italic">user_id</span></td>
+                        <td>Enables displaying the biography. Not compatible when loading a <span class="text-small text-italic">tag</span>, <span class="text-small text-italic">location</span> or <span class="text-small text-italic">user_id</span></td>
                     </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
